# zkp-chaum-pederson-auth

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.client  Dockerfile.server  NOTES.md  README.md  build.rs  docker-compose.yaml
.github/workflows/: ci.yml
client/: Cargo.toml
client/src/: cli.rs  main.rs  utils.rs
proto/: zkp_auth.proto
server/: Cargo.toml
server/src/: cli.rs  main.rs
src/: lib.rs  main.rs
utils/: Cargo.toml
utils/src/: lib.rs
