[workspace]
members = [".", "server", "client", "utils"]

[package]
name = "zkp-common"
version = "0.1.0"
authors = ["ZKP Team <team@z.kp>"]
edition = "2021"
description = "ZKP Auth Common"

[dependencies]
lazy_static = "1.4.0"
num-bigint = "0.4.3"
num-traits = "0.2.15"
prost = "0.11.9"
tonic = "0.9.2"

[build-dependencies]
tonic-build = "0.9.2"

[dev-dependencies]
zkp-utils = { path = "./utils" }
