[package]
name = "zkp-client"
version = "0.1.0"
authors = ["ZKP Team <team@z.kp>"]
edition = "2021"
description = "ZKP Auth Client"

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["env", "derive"] }
url = "2.4.0"
log = "0.4.19"
rpassword = "7.2.0"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
tonic = "0.9.2"

zkp-common = { path = ".." }
zkp-utils = { path = "../utils" }
